// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTitle renders with style provided 1`] = `
<h2
  class="dse-card-title"
  data-testid="card-title"
  style="background-color: black;"
>
  Test CardTitle
</h2>
`;

exports[`CardTitle renders with text content 1`] = `
<h2
  class="dse-card-title"
  data-testid="card-title"
>
  Test CardTitle
</h2>
`;
